## Imidiate Plans:
# global object size handling ( keep_distance, spring length and so on)
# color palettes also handle background and join color
