@@ -3,7 +3,7 @@
     @pos = new b2Vec2(0, 0)
     @force = new b2Vec2(0, 0)
     @friction = @default_friction = 2.0
-    @spring_force = 0.01
+    @spring_force = 0.03
 
   step: (dt) ->
     v = @force.Copy()
